[gd_scene load_steps=12 format=1]

[ext_resource path="res://images/Interface/box_title.png" type="Texture" id=1]
[ext_resource path="res://scenes/GUI/choose_game/game_list.gd" type="Script" id=2]
[ext_resource path="res://fonts/FACEBOLF.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://images/Interface/button.png" type="Texture" id=4]
[ext_resource path="res://fonts/Viga-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/KOMIKAX_ - neutra2.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.714844, 0.714844, 0.714844, 1 )
light_color = Color( 0.972656, 0.972656, 0.972656, 1 )
dark_color = Color( 0.265625, 0.265625, 0.265625, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 30
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]

font/size = 28
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]

font/size = 18
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 6 )

[node name="raiz_escolha_jogo" type="TextureFrame"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 360.0
margin/right = 780.0
margin/bottom = -275.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="nomeUser" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 189.5
margin/right = -150.0
margin/bottom = 168.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/selection_color = Color( 0.78125, 0.78125, 0.78125, 1 )
custom_colors/cursor_color = Color( 0.0466919, 0.664062, 0.0708079, 1 )
custom_colors/font_color_selected = Color( 0.274353, 0.484375, 0.435151, 1 )
custom_colors/font_color = Color( 0, 0.277344, 0.0303345, 1 )
placeholder/alpha = 1.0
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="b_jogoGoleiro" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 457.0
margin/right = -226.0
margin/bottom = 533.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/scale = Vector2( 1, 0.35 )

[node name="Label" type="Label" parent="b_jogoGoleiro"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 430.0
margin/bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "Jogo do Goleiro"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="b_sair" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 525.0
margin/right = -108.0
margin/bottom = 601.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/scale = Vector2( 0.5, 0.35 )

[node name="Label" type="Label" parent="b_sair"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 220.0
margin/bottom = 85.0
custom_fonts/font = SubResource( 6 )
text = "Sair (ou ESC)"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="b_continuar" type="TextureButton" parent="."]

visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 525.0
margin/right = -108.0
margin/bottom = 601.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/scale = Vector2( 0.5, 0.35 )

[node name="Label" type="Label" parent="b_continuar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 57.0
margin/top = 26.0
margin/right = 163.0
margin/bottom = 56.0
custom_fonts/font = SubResource( 7 )
text = "Continuar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 35.0
margin/top = 9.0
margin/right = 468.0
margin/bottom = 87.0
custom_fonts/font = SubResource( 5 )
text = "O jogo do goleiro"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 88.0
margin/right = 461.0
margin/bottom = 508.0
custom_fonts/font = SubResource( 5 )
text = "Você é um goleiro na hora do pênalti e deve decidir para onde pular (esquerda, direita ou centro) antes da bola sair. Atenção: cada batedor tem um estratégia própria  para escolher onde vai chutar. Mas cuidado, ele pode tentar te enganar!"
align = 3
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="text_changed" from="nomeUser" to="." method="_on_nomeUser_text_changed"]


